# POBR-logo-recognition

./: Cargo.toml  README.md
src/: bin.rs  clusters.rs  clusters_custom.rs  colors.rs  effects.rs  filters.rs  kernels.rs  lib.rs  opencv_allowed.rs  primitives.rs  segments.rs
src/filters/: conv_filter.rs  filter.rs  mod.rs  rank_filter.rs
tests/: tests.rs
