[package]
name = "logo-recognition"
version = "0.1.0"
authors = ["Roman Moskalenko <skalermo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.49.1"

[lib]
name = "logo_lib"
path = "src/lib.rs"

[[bin]]
name = "logo_bin"
path = "src/bin.rs"

